--- a/src/MainGUI.form
+++ b/src/MainGUI.form
@@ -1,13 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainGUI">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="20" y="20" width="748" height="229"/>
     </constraints>
     <properties/>
     <border type="none"/>
-    <children/>
+    <children>
+      <component id="bfda9" class="javax.swing.JLabel" binding="tipRLabel">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="19" height="19"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Tip"/>
+        </properties>
+      </component>
+      <component id="17a32" class="javax.swing.JLabel" binding="tipLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Tip %"/>
+        </properties>
+      </component>
+      <component id="bfea0" class="javax.swing.JLabel" binding="totalRLabel">
+        <constraints>
+          <grid row="2" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Total"/>
+        </properties>
+      </component>
+      <component id="4a213" class="javax.swing.JTextArea" binding="totalResult">
+        <constraints>
+          <grid row="2" column="4" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+          <lineWrap value="true"/>
+        </properties>
+      </component>
+      <component id="f306e" class="javax.swing.JButton" binding="tipSubtract">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="41" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="T-"/>
+        </properties>
+      </component>
+      <component id="f1c92" class="javax.swing.JTextField" binding="tip">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="140" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+        </properties>
+      </component>
+      <component id="4ccc7" class="javax.swing.JButton" binding="tipAdd">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="18" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="T+"/>
+        </properties>
+      </component>
+      <component id="61e12" class="javax.swing.JLabel" binding="peopleLabel">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Number of People"/>
+        </properties>
+      </component>
+      <component id="8ec9b" class="javax.swing.JButton" binding="peopleSubtract">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="41" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="P-"/>
+        </properties>
+      </component>
+      <component id="ead34" class="javax.swing.JTextField" binding="people">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="140" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+        </properties>
+      </component>
+      <component id="ee908" class="javax.swing.JButton" binding="peopleAdd">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="18" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="P+"/>
+        </properties>
+      </component>
+      <component id="77f88" class="javax.swing.JLabel" binding="billLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="18" height="19"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Bill"/>
+        </properties>
+      </component>
+      <component id="f1c6e" class="javax.swing.JTextArea" binding="tipResult">
+        <constraints>
+          <grid row="0" column="4" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+        </properties>
+      </component>
+      <component id="fd093" class="javax.swing.JTextField" binding="bill">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="f1642" class="javax.swing.JLabel" binding="billWarning">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="(Press the Enter Key)"/>
+        </properties>
+      </component>
+    </children>
   </grid>
 </form>
